--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url(styles/header.css);
-@import url(styles/grid.css);
+@import url(styles/grid2.css);
 :root{
     --cor-de-fundo: #e5e5e5;
     --branco: #FFFFFF;
