--- a/styles/grid2.css
+++ b/styles/grid2.css
@@ -15,3 +15,11 @@
     margin-bottom: 7px;
     text-align: center;
 }
+@media screen and (min-width: 1024px) { 
+    .Imagem{
+    font-size: 30px;
+    font-family: var(--fonte-secundaria);
+    color:rgb(43,226,101);
+    display: block;
+    }
+}
