--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,7 @@
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
+    
 }
 
 .cabecalho{
@@ -52,4 +53,23 @@
     background-color: var(--branco);
 }
 
+.titulo__cabecalho{
+    display: none;
+}
 
+@media screen and (min-width: 1024px) { 
+    .lista-menu__titulo{
+    font-size: 30px;
+    font-family: var(--fonte-secundaria);
+    color:rgb(43,226,101);
+    display: block;
+    }
+
+   .titulo__cabecalho{
+    font-size: 30px;
+    font-family: var(--fonte-secundaria) ;
+    color:rgb(43,226,101);
+    display: block;
+   }
+
+}
