--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url(styles/header.css);
 @import url(styles/grid2.css);
 :root{
-    --cor-de-fundo: #e5e5e5;
+    --cor-de-fundo: #77df6d;
     --branco: #FFFFFF;
     --amarelo:  #FECD2F;
     --roxo-degrade: 
-    linear-gradient(94.49deg,  #733887 35.48%,  #C75EEB 143.32%);
+    linear-gradient(94.49deg,  #c14edd 35.48%,  #C75EEB 143.32%);
 
 }
 body{
