--- a/styles/grid2.css
+++ b/styles/grid2.css
@@ -1,6 +1,6 @@
 .Imagem{
-    width: 90px!important;
-    height: 90px!important;
+    width: 150px!important;
+    height: 200px!important;
 }
 .div-todasimagens{
     display: grid;
@@ -12,14 +12,22 @@
 .titulo{
     font-size: 10px;
     color: rgb(146, 83, 204);
-    margin-bottom: 7px;
-    text-align: center;
+    margin-bottom: 8px;
+    text-align: left;
+    display: none;
 }
 @media screen and (min-width: 1024px) { 
     .Imagem{
-    font-size: 30px;
+    font-size: 20px;
     font-family: var(--fonte-secundaria);
     color:rgb(43,226,101);
     display: block;
     }
+    
+    .titulo{
+        font-size: 30px;
+        font-family: var(--fonte-secundaria);
+        color:rgb(226, 43, 186);
+        display: block;
+        }
 }
