--- a/styles.css/header.css
+++ b/styles.css/header.css
@@ -1,4 +1,4 @@
-.cabecalho_menu-hamburguer{
+.cabecalho_menu-hamburguer {
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
@@ -7,23 +7,50 @@
     background-position: center;
 }
 
-.cabecalho{
+.cabecalho {
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
 }
-.container{
+
+.container {
     display: flex;
     align-items: center;
 }
-.conteiner_imagem{
+
+.conteiner_imagem {
     padding: 1em;
 }
-.lista-menu{
+
+.lista-menu {
     display: none;
     position: absolute;
     top: 100%;
     background-color: black;
 }
+
+@media screen and (min-width: 1024px) {
+    .titulo__cabecalho {
+        font-size: 30px;
+        font-family: var(--fonte-secundaria);
+        color: rgb(43, 226, 101);
+        display: block;
+    }
+
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes__item {
+        padding: 0 1em;
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }   
+}
+
+
